// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders correctly 1`] = `
<div
  class="root loading"
/>
`;

exports[`<Image /> renders correctly 2`] = `
<div
  class="qux root loading"
/>
`;
